--- a/CSS/components.css
+++ b/CSS/components.css
@@ -23,7 +23,13 @@
 
 
 
-
+img.avatar {
+  display: inline-block;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  object-fit: cover;
+}
 
 /*------------------------------------*\
   #HEADER
