--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -21,35 +21,17 @@
   #ELEMENTS
 \*------------------------------------*/
 
-.layout__item--full-width           { width: 100%; }
-
-.layout__item--50-percent-w-gutter  { width: calc(50% - 1.5rem); }
-
-.layout__item--70-percent-centered { 
-  width: 70%; 
-  margin: 0 auto;
+body {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
 }
 
-.flex-container   { display: flex; }
+.layout__item--full-width { width: 100%; }
 
-.flex-dir-row     { flex-direction: row; }
+.flex-container           { display: flex; }
 
-.flex-dir-column  { flex-direction: column; }
+.flex-row                 { flex-direction: row; }
 
-.header__content { 
-  justify-content:  space-between;
-  height:           100%;
-}
+.header__content          { justify-content: space-between; }
 
-.logo { align-self: center; }
-
-.nav__link-container {
-  justify-content:  space-between;
-  flex-wrap:        wrap;
-  width:            25vw;
-}
-.main { 
-  margin:           4rem auto;
-  justify-content:  space-between; 
-  min-height:       calc(100vh - 8rem);
-}
+.header__logo             { align-self: center; }
