--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -35,3 +35,17 @@ body {
 .header__content          { justify-content: space-between; }
 
 .header__logo             { align-self: center; }
+
+
+.right { 
+  position: relative;
+  height: 100vh;
+}
+
+.compose { 
+  position: absolute;
+  right: 0;
+  bottom: 0; 
+  width: 100%;
+  height: 14rem;
+}
