--- a/CSS/components.css
+++ b/CSS/components.css
@@ -43,7 +43,7 @@
  .header {
   background-color: #6200EA;
   height:           8rem;
-  padding:          0 3rem;
+  padding:          0 2rem;
 }
 
   .header__content {
@@ -175,13 +175,12 @@ div.selected {
     color:          var(--primary-font-color);
   }
 
-.avatar-left {
-  float:        left;
+.avatar{
   margin-right: 1.5rem;
 }
 
-.avatar-right {
-  float:        right;
+.avatar40 {
+  margin-right: 0;
 }
 
 .clearfix::after {
@@ -243,5 +242,54 @@ div.selected {
   background-color: var(--bg-primary);
 }
 
+.timestamp,
+.typing {
+  margin: 0 6rem .5rem;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  letter-spacing: .24rem;
+  text-transform: uppercase;
+  color: var(--bg-thirdly);
+  font-weight: bold;
+}
 
+.bubble {
+  margin-bottom:  1rem;
+  padding:        2rem;
+  font-size:      1.4rem;
+  line-height:    2rem;
+  /* max-width:      6rem;
+  width: 100%; */
+  max-width:      60%;
+}
 
+.sender-bubble {
+  border-radius:    0 1.5rem 1.5rem 1.5rem;
+  background-color: var(--bg-secondary);
+  color:            var(--primary-font-color);
+  margin-left:      6rem;
+}
+
+.owner-bubble {
+  border-radius:    1.5rem 1.5rem 0 1.5rem;
+  background-color: var(--bg-thirdly);
+  color:            var(--thirdly-font-color);
+  /* margin-right:     6rem; */
+}
+
+.chat__line__avatar-container,
+.chat__line__bubbles {
+  display: inline-block;
+}
+
+.chat__line {
+  position: relative;
+}
+
+.chat__line__avatar-container {
+  position: absolute;
+}
+
+.typing {
+  margin-bottom: 20rem;
+}
