--- a/CSS/base.css
+++ b/CSS/base.css
@@ -136,3 +136,6 @@ h3 {
   letter-spacing:   .24rem;
   text-transform:   uppercase;
 }
+
+
+body::-webkit-scrollbar { display: none; } /* hide the scrollbar in chrome */
