--- a/CSS/components.css
+++ b/CSS/components.css
@@ -232,6 +232,11 @@ div.selected {
 
 .chat::-webkit-scrollbar { display: none; } /* hide the scrollbar in chrome */
 
+.chat__line__avatar-container {
+  /* display: inline-block; */
+  /* height: 100%; */
+}
+
 .compose {
   background-color: var(--bg-secondary);
   padding: 2rem 12rem 2rem 2rem;
@@ -244,13 +249,13 @@ div.selected {
 
 .timestamp,
 .typing {
-  margin: 0 6rem .5rem;
-  font-size: 1.2rem;
-  line-height: 1.5rem;
+  margin-bottom:  .5rem;
+  font-size:      1.2rem;
+  line-height:    1.5rem;
   letter-spacing: .24rem;
   text-transform: uppercase;
-  color: var(--bg-thirdly);
-  font-weight: bold;
+  color:          var(--bg-thirdly);
+  font-weight:    bold;
 }
 
 .bubble {
@@ -258,8 +263,6 @@ div.selected {
   padding:        2rem;
   font-size:      1.4rem;
   line-height:    2rem;
-  /* max-width:      6rem;
-  width: 100%; */
   max-width:      60%;
 }
 
@@ -267,7 +270,7 @@ div.selected {
   border-radius:    0 1.5rem 1.5rem 1.5rem;
   background-color: var(--bg-secondary);
   color:            var(--primary-font-color);
-  margin-left:      6rem;
+  /* margin-left:      6rem; */
 }
 
 .owner-bubble {
@@ -277,18 +280,18 @@ div.selected {
   /* margin-right:     6rem; */
 }
 
-.chat__line__avatar-container,
+/* .chat__line__avatar-container,
 .chat__line__bubbles {
   display: inline-block;
-}
+} */
 
-.chat__line {
+/* .chat__line {
   position: relative;
-}
+} */
 
-.chat__line__avatar-container {
+/* .chat__line__avatar-container {
   position: absolute;
-}
+} */
 
 .typing {
   margin-bottom: 20rem;
