--- a/CSS/components.css
+++ b/CSS/components.css
@@ -183,6 +183,11 @@ div.selected {
   margin-right: 0;
 }
 
+.chat__avatar__self {
+  margin-right: 0;
+  margin-left: 1.5rem;
+}
+
 .clearfix::after {
   content:  "";
   display:  table;
@@ -224,31 +229,16 @@ div.selected {
 .right { background-color: var(--bg-primary); }
 
 .chat {
-  padding: 4rem 6rem 6.5rem 6rem;
-  height: 100%;
+  padding: 4rem 6rem 0 6rem;
+  height: calc(100vh - 22rem);
   overflow-y: scroll;
   /* scrollbar-width:    none; */
 }
 
 .chat::-webkit-scrollbar { display: none; } /* hide the scrollbar in chrome */
 
-.chat__line__avatar-container {
-  /* display: inline-block; */
-  /* height: 100%; */
-}
-
-.compose {
-  background-color: var(--bg-secondary);
-  padding: 2rem 12rem 2rem 2rem;
-  border-left: .1rem solid var(--bg-primary);
-}
-
-.compose__box {
-  background-color: var(--bg-primary);
-}
-
 .timestamp,
-.typing {
+.chat__typing {
   margin-bottom:  .5rem;
   font-size:      1.2rem;
   line-height:    1.5rem;
@@ -256,6 +246,10 @@ div.selected {
   text-transform: uppercase;
   color:          var(--bg-thirdly);
   font-weight:    bold;
+}
+
+.text-right {
+  text-align: end;
 }
 
 .bubble {
@@ -270,29 +264,81 @@ div.selected {
   border-radius:    0 1.5rem 1.5rem 1.5rem;
   background-color: var(--bg-secondary);
   color:            var(--primary-font-color);
-  /* margin-left:      6rem; */
 }
 
 .owner-bubble {
   border-radius:    1.5rem 1.5rem 0 1.5rem;
   background-color: var(--bg-thirdly);
   color:            var(--thirdly-font-color);
-  /* margin-right:     6rem; */
 }
 
-/* .chat__line__avatar-container,
-.chat__line__bubbles {
-  display: inline-block;
-} */
+.chat__typing {
+  margin-bottom: 25rem;
+}
 
-/* .chat__line {
+.compose {
+  background-color: var(--bg-secondary);
+  padding: 2rem 12rem 2rem 2rem;
+  border-left: .1rem solid var(--bg-primary);
+}
+
+.compose__box {
+  background-color: var(--bg-primary);
   position: relative;
-} */
+}
 
-/* .chat__line__avatar-container {
+.compose__box__textarea {
+  background-color: var(--bg-primary);
+  outline: none;
+  border: none;
+  border-bottom: .3rem solid transparent;
+  width: 100%;
+  height: 10rem;
+  padding: 1.6rem 2.4rem;
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  color: var(--primary-font-color);
+}
+
+.compose__box__textarea:focus {
+  border-bottom-color: var(--bg-header);
+}
+
+.compose__box__textarea::placeholder {
+  font-size: 1.4rem;
+  line-height: 1.8rem;
+  font-weight: bold;
+  color: var(--primary-font-color);
+  opacity: .25;
+}
+
+.textarea-icon  {
   position: absolute;
-} */
+  top: 1.5rem;
+  right: 0;
+  width: 2rem;
+  height: 2rem;
+  font-size: 2rem;
+  line-height: 2rem;
+  color: var(--primary-font-color);
+  opacity: .25;
+}
 
-.typing {
-  margin-bottom: 20rem;
+.compose__box__attachment { margin-right: 8rem; }
+
+.compose__box__smile      { margin-right: 3rem; }
+
+.compose__box__send {
+  position: absolute;
+  top: 0;
+  right: -6rem;
+  font-size: 2rem;
+  line-height: 2rem;
+  color: var(--thirdly-font-color);
+  background-color: var(--bg-header);
+  border-radius: 50%;
+  width: 5rem;
+  height: 5rem;
+  border: none;
+  outline: none;
 }
