--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -38,15 +38,7 @@ body {
   justify-content: flex-end;
  }
 
- .flex-start {
-   align-items: flex-start;
- }
-
- .owner-bubble {
-  justify-content: flex-end;
-  align-self: flex-end;
-  align-items: flex-end;
- }
+ .flex-start              { align-items: flex-start; }
 
 .header__content          { justify-content: space-between; }
 
