--- a/CSS/components.css
+++ b/CSS/components.css
@@ -274,6 +274,12 @@ div.selected {
   color:            var(--thirdly-font-color);
 }
 
+/* .owner-bubble {
+  justify-content: flex-end;
+  align-self: flex-end;
+  align-items: flex-end;
+ } */
+
 .chat__typing {
   margin-bottom: 25rem;
 }
