--- a/CSS/layout.css
+++ b/CSS/layout.css
@@ -9,7 +9,10 @@
  * CONTENTS
  *
  * LAYOUT
- * Elements.............Rules for the container and items.
+ * Grid.................Rules for the grid container.
+ * Flexbox..............Rules for the flexbox container and items.
+ * Floats...............Rules for the floats items.
+ * Elements.............Rules for the other containers and items.
  *
  */
 
@@ -18,7 +21,7 @@
 
 
 /*------------------------------------*\
-  #ELEMENTS
+  #GRID
 \*------------------------------------*/
 
 body {
@@ -26,7 +29,13 @@ body {
   grid-template-columns: 1fr 3fr;
 }
 
-.layout__item--full-width { width: 100%; }
+
+
+
+
+/*------------------------------------*\
+  #FLEXBOX
+\*------------------------------------*/
 
 .flex-container           { display: flex; }
 
@@ -44,6 +53,14 @@ body {
 
 .header__logo             { align-self: center; }
 
+
+
+
+
+/*------------------------------------*\
+  #FLOATS
+\*------------------------------------*/
+
 .float-left   { float: left; }
 
 .float-right  { float: right; }
@@ -54,6 +71,30 @@ body {
   display:  table;
   clear:    both;
 }
+
+
+
+
+
+/*------------------------------------*\
+  #HELPERS
+\*------------------------------------*/
+
+.clearfix::after {
+  content:  "";
+  display:  table;
+  clear:    both;
+}
+
+
+
+
+
+/*------------------------------------*\
+  #ELEMENTS
+\*------------------------------------*/
+
+.layout__item--full-width { width: 100%; }
 
 .right { 
   position: relative;
