--- a/CSS/components.css
+++ b/CSS/components.css
@@ -23,18 +23,77 @@
 
 
 
-.avatar {
-  display: inline-block;
-  width: 5rem;
-  height: 5rem;
-  border-radius: 50%;
-  object-fit: cover;
+
+/*------------------------------------*\
+  #AVATARS, ICONS, PLACEHOLDERS
+\*------------------------------------*/
+
+ .avatar {
+  display:        inline-block;
+  width:          5rem;
+  height:         5rem;
+  border-radius:  50%;
+  object-fit:     cover;
+  margin-right:   1.5rem;
 }
 
 .avatar40 {
-  width:  4rem;
-  height: 4rem;
+  width:        4rem;
+  height:       4rem;
+  margin-right: 0;
 }
+
+.chat__avatar__self {
+  margin-right: 0;
+  margin-left: 1.5rem;
+}
+
+.search-input::placeholder,
+.icon {
+  font-weight:  bold;
+  opacity:      .25;
+}
+
+.icon {
+  font-size:    2rem;
+  line-height:  2rem;
+}
+
+.compose__box__textarea::placeholder {
+  font-size:    1.4rem;
+  line-height:  1.8rem;
+  font-weight:  bold;
+  color:        var(--primary-font-color);
+  opacity:      .25;
+}
+
+
+
+
+
+/*------------------------------------*\
+  #BUTTONS
+\*------------------------------------*/
+
+.btn {
+  display:          flex;
+  align-items:      center;
+  justify-content:  center;
+  margin:           1.5rem;
+  height:           5rem;
+  border:           .2rem solid var(--secondary-font-color);
+  color:            var(--secondary-font-color);
+  border-radius:    2.4rem;
+  text-transform:   uppercase;
+  font-size:        1.2rem;
+  line-height:      1.5rem;
+  font-weight:      bold;
+  letter-spacing:   .24rem;
+}
+
+
+
+
 
 /*------------------------------------*\
   #HEADER
@@ -58,20 +117,20 @@
       color:        var(--thirdly-font-color);
     }
 
-.header__student__name {
-  display:      grid;
-  place-items:  center;
-  margin-right: 2rem;
-}
-
-  .student-name {
-    font-size:      1.2rem;
-    font-weight:    bold;
-    line-height:    1.5rem;
-    letter-spacing: .24rem;
-    color:          var(--thirdly-font-color);
-    text-transform: uppercase;
+  .header__student__name {
+    display:      grid;
+    place-items:  center;
+    margin-right: 2rem;
   }
+
+    .student-name {
+      font-size:      1.2rem;
+      font-weight:    bold;
+      line-height:    1.5rem;
+      letter-spacing: .24rem;
+      color:          var(--thirdly-font-color);
+      text-transform: uppercase;
+    }
 
 
 
@@ -111,8 +170,6 @@ div.selected {
   background-color: var(--bg-primary);
 }
 
-.search-input   { width: 80%; }
-
 .search-submit  { 
   position: relative;
   left:     -.3rem;
@@ -121,6 +178,7 @@ div.selected {
 }
 
 .search-input {
+  width:          80%;
   font-size:      1.4rem;
   line-height:    1.8rem;
   padding-left:   2.4rem;
@@ -128,17 +186,6 @@ div.selected {
 }
 
 .search-input:focus { border-bottom-color: var(--secondary-font-color); }
-
-.search-input::placeholder,
-.icon {
-  font-weight:  bold;
-  opacity:      .25;
-}
-
-.icon {
-  font-size:    2rem;
-  line-height:  2rem;
-}
 
 .contact-container {
   border-bottom:  .1rem solid var(--bg-primary);
@@ -175,47 +222,6 @@ div.selected {
     color:          var(--primary-font-color);
   }
 
-.avatar{
-  margin-right: 1.5rem;
-}
-
-.avatar40 {
-  margin-right: 0;
-}
-
-.chat__avatar__self {
-  margin-right: 0;
-  margin-left: 1.5rem;
-}
-
-.clearfix::after {
-  content:  "";
-  display:  table;
-  clear:    both;
-}
-
-
-
-
-/*------------------------------------*\
-  #BUTTONS
-\*------------------------------------*/
-
-.btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 1.5rem;
-  height: 5rem;
-  border: .2rem solid var(--secondary-font-color);
-  color: var(--secondary-font-color);
-  border-radius: 2.4rem;
-  text-transform: uppercase;
-  font-size: 1.2rem;
-  line-height: 1.5rem;
-  font-weight: bold;
-  letter-spacing: .24rem;
-}
 
 
 
@@ -224,9 +230,9 @@ div.selected {
   #MAIN CONTENT
 \*------------------------------------*/
 
-.main { background-color: #F4F3F5; }
+.main   { background-color: #F4F3F5; }
 
-.right { background-color: var(--bg-primary); }
+.right  { background-color: var(--bg-primary); }
 
 .chat {
   padding: 4rem 6rem 0 6rem;
@@ -250,9 +256,7 @@ div.selected {
   font-weight:    bold;
 }
 
-.text-right {
-  text-align: end;
-}
+.text-right { text-align: end; }
 
 .bubble {
   margin-bottom:  1rem;
@@ -274,62 +278,39 @@ div.selected {
   color:            var(--thirdly-font-color);
 }
 
-/* .owner-bubble {
-  justify-content: flex-end;
-  align-self: flex-end;
-  align-items: flex-end;
- } */
-
-.chat__typing {
-  margin-bottom: 25rem;
-}
+.chat__typing { margin-bottom: 25rem; }
 
 .compose {
   background-color: var(--bg-secondary);
-  padding: 2rem 12rem 2rem 2rem;
-  border-left: .1rem solid var(--bg-primary);
+  padding:          2rem 12rem 2rem 2rem;
+  border-left:      .1rem solid var(--bg-primary);
 }
 
 .compose__box {
   background-color: var(--bg-primary);
-  position: relative;
+  position:         relative;
 }
 
 .compose__box__textarea {
   background-color: var(--bg-primary);
-  outline: none;
-  border: none;
-  border-bottom: .3rem solid transparent;
-  width: 100%;
-  height: 10rem;
-  padding: 1.6rem 2.4rem;
-  font-size: 1.4rem;
-  line-height: 1.8rem;
-  color: var(--primary-font-color);
+  outline:          none;
+  border:           none;
+  border-bottom:    .3rem solid transparent;
+  width:            100%;
+  height:           10rem;
+  padding:          1.6rem 2.4rem;
+  font-size:        1.4rem;
+  line-height:      1.8rem;
+  color:            var(--primary-font-color);
 }
 
-.compose__box__textarea:focus {
-  border-bottom-color: var(--bg-header);
-}
-
-.compose__box__textarea::placeholder {
-  font-size: 1.4rem;
-  line-height: 1.8rem;
-  font-weight: bold;
-  color: var(--primary-font-color);
-  opacity: .25;
-}
+.compose__box__textarea:focus { border-bottom-color: var(--bg-header); }
 
 .textarea-icon  {
   position: absolute;
-  top: 1.5rem;
-  right: 0;
-  width: 2rem;
-  height: 2rem;
-  font-size: 2rem;
-  line-height: 2rem;
-  color: var(--primary-font-color);
-  opacity: .25;
+  top:      1.5rem;
+  right:    0;
+  color:    var(--primary-font-color);
 }
 
 .compose__box__attachment { margin-right: 8rem; }
@@ -337,16 +318,16 @@ div.selected {
 .compose__box__smile      { margin-right: 3rem; }
 
 .compose__box__send {
-  position: absolute;
-  top: 0;
-  right: -6rem;
-  font-size: 2rem;
-  line-height: 2rem;
-  color: var(--thirdly-font-color);
+  position:         absolute;
+  top:              0;
+  right:            -6rem;
+  font-size:        2rem;
+  line-height:      2rem;
+  color:            var(--thirdly-font-color);
   background-color: var(--bg-header);
-  border-radius: 50%;
-  width: 5rem;
-  height: 5rem;
-  border: none;
-  outline: none;
+  border-radius:    50%;
+  width:            5rem;
+  height:           5rem;
+  border:           none;
+  outline:          none;
 }
