--- a/CSS/components.css
+++ b/CSS/components.css
@@ -10,15 +10,16 @@
 
 
 /**
- * CONTENTS
+ * AVATARS, ICONS, PLACEHOLDERS
+ * 
+ * BUTTONS
  *
  * HEADER
  *
- * NAVIGATION
+ * ASIDE LIST
  *
  * MAIN CONTENT
  *
- * FOOTER
  */
 
 
